refactor: 실행 경계가 도메인 모델을 반환하지 않게 정리 (#449)
* refactor: 실행 경계가 도메인 모델을 반환하지 않게 정리

Constraint: #434는 실행 모듈 외부 경계의 raw Domain model 노출을 제거하되 API 응답 필드는 유지한다.
Rejected: domain enum/value type까지 일괄 contract-local 치환 | #434 범위를 넘어 API 파라미터/직렬화 호환 리스크가 커진다.
Confidence: high
Scope-risk: moderate
Directive: Facade, use-case interface, response/event DTO는 Domain entity를 필드나 factory parameter로 노출하지 않는다.
Tested: ./gradlew :admin:compileJava :admin:compileKotlin :apis:compileJava :apis:compileKotlin :admin:test --tests com.beat.admin.AdminArchitectureGuardTest :apis:test --tests com.beat.apis.ApisArchitectureGuardTest --no-daemon
Not-tested: full check; #434 focused admin/apis compile and boundary guards passed.

* test: 실행 경계 DTO 직렬화 계약을 고정

Constraint: #434는 raw Domain model 노출을 줄이되 API JSON field와 enum-string 응답 호환성을 유지해야 함
Rejected: Home 응답 전용 Result 계층 추가 | 현재 단일 QueryService 응답 조립 흐름에서는 wrapper만 늘고 JSON 계약 보존 증거가 더 중요함
Rejected: request/response package 전면 재배치 | #434 범위를 넘어 import churn과 API migration risk가 커짐
Confidence: high
Scope-risk: narrow
Directive: DTO/event boundary에서 Domain entity factory를 다시 추가하지 말고 primitive/result 값을 application service 안에서 조립할 것
Tested: ./gradlew :apis:test --tests com.beat.apis.ApisArchitectureGuardTest --tests com.beat.apis.ApisDtoJsonContractTest --no-daemon
Tested: ./gradlew check --no-daemon

* docs: application service 간 도메인 반환 경계를 명확히 고정

Constraint: 서비스 간 raw Domain model 공유 금지 규칙이 기존 README에서 해석상 애매했음

Rejected: 코드 정리와 문서 규칙을 같은 커밋에 섞기 | 후속 구현 검증 기준을 먼저 고정해야 함

Confidence: high

Scope-risk: narrow

Directive: 새 ApplicationService public method는 raw Domain model을 반환하지 말고 primitive/value/result/read model을 사용한다

Tested: git diff --check

Not-tested: documentation-only change; Gradle not required for this commit

* refactor: application service 간 도메인 반환 경계를 차단

ApplicationService 사이의 public helper가 raw Domain model을 넘기지 않도록 authentication/promotion/scheduler 흐름을 result primitive로 수렴한다.

Constraint: API response shape와 module-contract J